# router

./: .gitignore  .travis.yml  README.md  run.sh
c/: Makefile  calculate  main.c  optimal.c  optimal.h  road_system.c  road_system.h  run.sh
data/: heathrow-london.out
doc/: Problem.md
go/: .gitignore  Makefile  run.sh
go/src/: router.go
go/src/optimal/: optimal.go
go/src/roads/: roads.go
haskell/: LICENSE  Makefile  Readme.md  haskell.cabal  router.cabal  run.sh
haskell/src/: Heathrow.hs  Main.hs  Optimal.hi  Optimal.hs  RoadSystem.hi  RoadSystem.hs
java/: Makefile  run.sh
java/src/net/mackenzie_serres/router/: Main.java  Optimal.java  RoadSystem.java
lua/: main.lua  optimal.lua  road_system.lua  run.sh  utils.lua
ruby/: optimal.rb  road_system.rb  router.rb  run.sh
rust/: .gitignore  Cargo.toml  Makefile  run.sh
rust/src/: optimal.rs  reader.rs  roads.rs  router.rs
