-- For further documentation, see http://haskell.org/cabal/users-guide/

name:                router
version:             0.2.0.0
synopsis:            Program to calculate optimal path from one destination to another.
-- description:         
license:             MIT
license-file:        LICENSE
author:              Andrew Mackenzie
maintainer:          andrew@mackenzie-serres.net
-- copyright:           
category:            Development
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10


executable router
  main-is:           Main.hs
  other-modules:     RoadSystem
                     Optimal
  -- other-extensions:
  build-depends:       base
  hs-source-dirs:      src
  -- build with optimizations, multithreaded, enable embedding run time system options, run with all cores
  --ghc-options: -O3 -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010